# wsmde.github.io

./: init.py  pyproject.toml
cmsimde/: .gitignore  README.md  flaskapp.py  up.bat  wsgi.py
cmsimde/static/: Cango-15v00.js  Cango-24v03.js  Cango3D-11v00-min.js  Cango3D-11v00.js  Cango3D-8v00-min.js  Cango3D-8v00.js  Cango3DAnimation-2v00.js  CangoAnimation-10v05.js  CangoAxes-6v01.js  CangoAxes-9v02.js  Graph3D-2v03.js  SVGpathUtils-5v00.js  SVGpathUtils-6v03.js  Timeline-4v00.js  ace.py  beditor.py  brython.js  bs.js  buzz-1.2.1.js  canvasStack1v06.js  gearUtils-09.js  jquery-ui.1.12.1.min.js  konva.min.js  lua_editor.css  lua_editor.js  lua_editor.lua  pixi-3.0.5.min.js  winkPlayer.js
cmsimde/static/ace/: ace.js  ext-language_tools.js
cmsimde/static/ggame/: __init__.py  app.py  asset.py  astro.py  circle.py  event.py  headlessdeps.py  indicator.py  input.py  inputpoint.py  label.py  line.py  logic.py  mathapp.py  mathbase.py  point.py  pygamedeps.py  slider.py  sound.py  sprite.py  sysdeps.py  timer.py
cmsimde/up_dir/: acp  cms  init.py  localhost.crt  localhost.key  pelicanconf.py  waitress_server.py
config/: content.htm  content_backup.htm  sitetitle
content/: Abaqus.html  About.html  Ansys.html  AutoDesk.html  Brython.html  CAD.html  CAE.html  CAM.html  Certificate.html  Comsol.html  Inventor.html  KM.html  Layout.html  MISC.html  NX.html  Office.html  Software.html  SolidWorks.html  Windows.html  cadlab.html  cmsimde.html  index.html  sitemap.html  tipuesearch_content.js
downloads/: windows_kms_ipv6.7z
reveal/: index.html
(+35 files in other folders)
